# AoC2023

./: .gitignore  AoC2023.cabal  CHANGELOG.md  README.md  day1.html  day10.html  day11.html  day12.html  day13.html  day15.html  day16.html  day17.html  day18.html  day19.html  day2.html  day20.html  day22.html  day23.html  day3.html  day4.html  day5.html  day6.html  day7.html  day8.html  day9.html  docker-run  out.txt
day12/: notes.txt
day16/: input.txt  test.txt
day17/: notes.txt
src/: Day1.hs  Day10.hs  Day10_part2.hs  Day11.hs  Day12.hs  Day12_old.hs  Day13.hs  Day14.hs  Day15.hs  Day16.hs  Day17.hs  Day18.hs  Day19.hs  Day19_bak.hs  Day2.hs  Day20.hs  Day21.hs  Day21_part2.hs  Day21_part2_old.hs  Day22.hs  Day23.hs  Day23_part2.hs  Day23_part2_old.hs  Day24.hs  Day25.hs  Day25_old.hs  Day3.hs  Day4.hs  Day5.hs  Day5_part2.hs  Day6.hs  Day7.hs  Day7_part2.hs  Day8.hs  Day9.hs  Day9_old.hs  Main.hs  Template.hs  Utilities.hs  doisjff.dskjnfsd
