cabal-version:      2.4
name:               AoC2023
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             BenBean18
maintainer:         beakerthespeaker@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable AoC2023
    main-is:          Main.hs

    ghc-options: -optc-O3
    profiling: True

    -- Modules included in this executable, other than Main.
    other-modules: Utilities, Day1, Day2, Day3, Day4, Day5, Day5_part2, Day6, Day7, Day7_part2, Day8, Day9, Day9_old, Day10, Day10_part2, Day11, Day12, Day13, Day14, Day15, Day16, Day17, Day18, Day19, Day20, Day21, Day21_part2, Day22, Day23, Day23_part2, Day24

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base, text, array, regex-pcre-builtin, regex-base, containers, criterion, split, mod, ghc, PSQueue, multiset, IntervalMap, Unique, hmatrix, memoize, range, uri-encode
    hs-source-dirs:   src
    default-language: Haskell2010
